# cmip7-citation-service

./: .gitignore  README.md  manage.py  pyproject.toml
citation_site/: asgi.py  settings.py  urls.py  wsgi.py
citations/: models.py  serializers.py  urls.py  validators.py  views.py
