[project]
name = "cmip7-citation-service"
version = "0.1.0"
description = "A citation service for the CMIP7 project"
authors = [
    {name = "Daniel Westwood",email = "daniel.westwood@stfc.ac.uk"}
]
license = "BSD 3"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.1.14,<6.0.0)",
    "xmltodict (>=1.0.2,<2.0.0)",
    "pycountry (>=24.6.1,<25.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "markdown (>=3.10,<4.0)",
    "django-filter (>=25.2,<26.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
packages = [
    { include = 'citations_site' },
    { include = 'citations' }
]